# rust-framework

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/dto/: mod.rs  request.rs  response.rs
src/example/: mod.rs  user_dao.rs  user_entity.rs  user_service.rs
src/repo/: generic_repo.rs  repo.rs
src/service/: generic_service.rs  mod.rs  service.rs
