[package]
name = "rust-framework"
version = "0.1.0"
edition = "2021"
description = "基于sea-orm二次封装CRUD基础实现"
repository = "https://github.com/gaochen/crud_base_rust"


[dependencies]
async-trait = "0.1.77"
sea-orm = "1.0.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
strum = { version = "0.26.2", features = ["derive"] }
utoipa = { version = "4.2.0", features = ["axum_extras", "uuid", "chrono"] }
